# cmdstat

./: Cargo.toml  README.md  cmdstat.plugin.zsh
src/: main.rs  table.rs
